tests/cheri-ci/expected/0040-struct_redefinition.error.c.expected
cheri-ci/0040-struct_redefinition.error.c:8:8: error: constraint violation: redefinition of 'T'
struct T {
       ^ 
ยง6.7.2.3#1: 
1   A specific type shall have its content defined at most once.
